--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </ul>
                     <div class="line"></div>
                     <div class="buttons">
-                        <a class="btn-github" href="https://www.github.com">github</a>
+                        <a class="btn-github" href="https://github.com/mzaidkhan99/">github</a>
                         <a class="btn-visit-site" href="https://www.clock-z.herokuapp.com">visit site</a>
                     </div>
                 </div>
@@ -94,16 +94,18 @@
                     It only shows introduction paragraph from wikipedia.
                     </p>
                     <div class="line"></div>
-                    <h3>Languages used</h3>
+                    <h3>Languages/Technologies used</h3>
                     <ul>
                         <li>HTML 5</li>
                         <li>CSS</li>
                         <li>React</li>
                         <li>JavaScript</li>
+                        <li>API Integration</li>
+                        <li>JSON</li>
                     </ul>
                     <div class="line"></div>
                     <div class="buttons">
-                        <a class="btn-github" href="https://www.github.com">github</a>
+                        <a class="btn-github" href="https://github.com/mzaidkhan99/wordplay/tree/master">github</a>
                         <a class="btn-visit-site" href="https://www.wordplay-z.herokuapp.com">visit site</a>
                     </div>
                 </div>
@@ -115,7 +117,7 @@
                 </div>
                 <div class="proj_des">
                     <p><b>This Website</b><br>
-                    My portfolia website.
+                    My portfolio website.
                     </p>
                     <div class="line"></div>
                     <h3>Languages used</h3>
@@ -126,7 +128,7 @@
                     </ul>
                     <div class="line"></div>
                     <div class="buttons">
-                        <a class="btn-github" href="https://www.github.com">github</a>
+                        <a class="btn-github" href="https://github.com/mzaidkhan99/Portfolio">github</a>
                         <a class="btn-visit-site" href="https://www.mzaidkhan.herokuapp.com">visit site</a>
                     </div>
                 </div>
@@ -147,9 +149,9 @@
         <footer>
             <div class="footer-1">
                 <!-- social media icons -->
-                <span><a href="#"><i class="sc-icons fa fa-github" aria-hidden="true"></i></a></span>
-                <span><a href="#"><i class="sc-icons fa fa-facebook" aria-hidden="true"></i></a></span>
-                <span><a href="#"><i class="sc-icons fa fa-twitter" aria-hidden="true"></i></a></span>
+                <span><a href="https://github.com/mzaidkhan99/"><i class="sc-icons fa fa-github" aria-hidden="true"></i></a></span>
+                <span><a href="https://facebook.com/"><i class="sc-icons fa fa-facebook" aria-hidden="true"></i></a></span>
+                <span><a href="https://twitter.com/khanmz"><i class="sc-icons fa fa-twitter" aria-hidden="true"></i></a></span>
             </div>
             <div class="footer-2">
                 <p>M Z Khan</p>
