--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <!-- social media icons -->
                 <span><a href="https://github.com/mzaidkhan99/"><i class="sc-icons fa fa-github" aria-hidden="true"></i></a></span>
                 <span><a href="https://facebook.com/"><i class="sc-icons fa fa-facebook" aria-hidden="true"></i></a></span>
-                <span><a href="https://twitter.com/khanmz"><i class="sc-icons fa fa-twitter" aria-hidden="true"></i></a></span>
+                <span><a href="https://twitter.com/BlogKhanmz"><i class="sc-icons fa fa-twitter" aria-hidden="true"></i></a></span>
             </div>
             <div class="footer-2">
                 <p>M Z Khan</p>
